--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "gulp-jshint": "^2clear.0.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-zip": "^3.0.2",
     "hbs": "^4.0.0",
     "jshint": "^2.8.0",
     "less-middleware": "^2.0.1",
     "morgan": "^1.6.1",
+    "path": "^0.12.7",
     "serve-favicon": "^2.3.0",
     "vinyl-source-stream": "^1.1.0"
   }
